; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_write_adv_proto.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_write_adv_proto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

@WLAN_EID_ADV_PROTO = common dso_local global i32 0, align 4
@WLAN_EID_VENDOR_SPECIFIC = common dso_local global i32 0, align 4
@OUI_WFA = common dso_local global i32 0, align 4
@DPP_OUI_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wpabuf*)* @dpp_write_adv_proto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dpp_write_adv_proto(%struct.wpabuf* %0) #0 {
  %2 = alloca %struct.wpabuf*, align 8
  store %struct.wpabuf* %0, %struct.wpabuf** %2, align 8
  %3 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %4 = load i32, i32* @WLAN_EID_ADV_PROTO, align 4
  %5 = call i32 @wpabuf_put_u8(%struct.wpabuf* %3, i32 %4)
  %6 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %7 = call i32 @wpabuf_put_u8(%struct.wpabuf* %6, i32 8)
  %8 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %9 = call i32 @wpabuf_put_u8(%struct.wpabuf* %8, i32 127)
  %10 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %11 = load i32, i32* @WLAN_EID_VENDOR_SPECIFIC, align 4
  %12 = call i32 @wpabuf_put_u8(%struct.wpabuf* %10, i32 %11)
  %13 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %14 = call i32 @wpabuf_put_u8(%struct.wpabuf* %13, i32 5)
  %15 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %16 = load i32, i32* @OUI_WFA, align 4
  %17 = call i32 @wpabuf_put_be24(%struct.wpabuf* %15, i32 %16)
  %18 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %19 = load i32, i32* @DPP_OUI_TYPE, align 4
  %20 = call i32 @wpabuf_put_u8(%struct.wpabuf* %18, i32 %19)
  %21 = load %struct.wpabuf*, %struct.wpabuf** %2, align 8
  %22 = call i32 @wpabuf_put_u8(%struct.wpabuf* %21, i32 1)
  ret void
}

declare dso_local i32 @wpabuf_put_u8(%struct.wpabuf*, i32) #1

declare dso_local i32 @wpabuf_put_be24(%struct.wpabuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
